# online-kueaplan

./: .drone.yml  .gitignore  .pre-commit-config.yaml  Cargo.toml  NOTICE  README.md  ruff.toml
api_types/: Cargo.toml
api_types/src/: lib.rs
backend/: .gitignore  Cargo.toml  diesel.toml
backend/migrations/2022-09-25-130147_initial_schema/: up.sql
backend/migrations/2023-12-30-160951_begin_end_update_deleted_categories/: down.sql
backend/migrations/2025-03-11-195954_make_category_mandatory/: down.sql
backend/src/: api.rs  auth_session.rs  data_store.rs  database.rs  file_io.rs  lib.rs  main.rs  models.rs  schema.rs  store.rs  web.rs
backend/src/api/: endpoints_auth.rs  endpoints_entry.rs  endpoints_event.rs  endpoints_room.rs  mod.rs  tests.rs
backend/src/api/tests/: mod.rs  sample_data.rs
backend/src/data_store/: mod.rs  models.rs  postgres.rs  schema.rs  store_mock.rs
backend/src/database/: models.rs  schema.rs  store.rs
backend/src/web/: mod.rs
backend/src/web/api/: endpoints_auth.rs  endpoints_category.rs  mod.rs  (+1 more)
backend/static/: main.js  print.css
backend/templates/: base.html  login_form.html  main_list.html
server/: .gitignore  Cargo.toml  diesel.toml
server/migrations/2022-09-25-130147_initial_schema/: down.sql
server/migrations/2024-06-02-083810_authorization/: down.sql
server/migrations/2025-03-15-112501_previous_dates_instead_of_residues/: up.sql
server/src/: auth_session.rs  cli_error.rs  file_io.rs  lib.rs  main.rs  setup.rs
server/src/cli/: database_migration.rs  file_io.rs  manage_events.rs  manage_passphrases.rs  mod.rs  util.rs
server/src/data_store/: auth_token.rs  mod.rs  models.rs  postgres.rs  schema.rs  store_mock.rs  util.rs
server/src/web/: frab_xml.rs  http_error_logging.rs  ical.rs  mod.rs  redirect_endpoints.rs  time_calculation.rs  util.rs
server/static/: edit_entry_form.js  edit_entry_form_utils.js  main.css  print.css  protect_changes.js  review-notifications.js  screen.css  submit_entry_form.js  tabbed-form.js  theme-switch.js  time-schedule-edit.js
server/templates/: _edit_entry_navbar.html  about.html  app_error.html  base.html  base_config.html  calendar_link_overview.html  categories_list.html  config_index.html  delete_announcement_form.html  delete_category_form.html  delete_entry_form.html  delete_passphrase_form.html  delete_room_form.html  edit_announcement_form.html  edit_category_form.html  edit_entry_form.html  edit_extended_event_form.html  edit_passphrase_form.html  edit_room_form.html  error.html  events_list.html  list_own_roles.html  login_form.html  main_list.html  main_list_by_category.html  main_list_by_room.html  main_list_without_room.html  manage_announcements.html  manage_categories.html  manage_passphrases.html  manage_rooms.html  new_derivable_passphrase_form.html  new_passphrase_form.html  new_previous_date_form.html  participant_submit_entry_form.html  previous_dates_overview.html  print_link_and_passphrase.html  review.html  rooms_list.html
server/templates/forms/: _info_and_errors.html  checkbox.html  form_field.html  hidden_input.html  select.html
server/templates/sub_templates/: announcement.html  edit_entry_navbar.html  entry_description.html  main_list_row.html
(+232 files in other folders)
