[package]
name = "kueaplan_api_types"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "^1.1.2", features = ["serde"] }
chrono = { version = "^0.4.22", features=["serde"] }
