[package]
name = "kueaplan_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "^2.0.0", features = ["postgres", "uuid", "chrono"] }
uuid = { version = "^1.1.2", features = ["serde"] }
chrono = { version = "^0.4.22"}
dotenvy = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
