[package]
name = "kueaplan_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "^2.0.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
uuid = { version = "^1.1.2" }
chrono = { version = "^0.4.22"}
chrono-tz = "^0.10.1"
dotenvy = "0.15.5"
serde = { version = "^1.0" }
serde_json = { version = "^1.0.91" }
actix-web = {version =  "^4", features = ["cookies"] }
rust-embed = "^8.6.0"
log = "^0.4"
env_logger = "^0.10"
r2d2 = "^0.8"
ring = "^0.17.8"
base64 = "^0.22.1"
kueaplan_api_types = {path = "../api_types"}
clap = { version = "4.5.30", features = ["derive"] }
mime_guess = "^2.0.5"
rinja = { version = "^0.3.5", features = ["serde_json"] }
url = "^2.5.4"
comrak = "^0.36"
palette = "^0.7.6"
lazy_static = "^1.5.0"
regex = "^1.11.1"
